# SVX

SVX Docs/: Design Modeling History.vsd  SVX for 10x WG Scrubbed.pptx  SVX_proposal_extracts.pptx
SVX Docs/SVX Public Docs/: DCC_Efficient_Circuit_Design_with_uDL.doc  DCC_Efficient_Circuit_Design_with_uDL.ppt  PAD and SVX Plans Scrubbed.pptx  SVX Data Flow.pptx  uDL_DCC_Abstract.doc
SVX Docs/Wiki pages Scrubbed/: SvxMain.mht  ToDo.mht
svx_repo/: CMakeLists.txt  README.txt  post_ci.script
svx_repo/Docs/: NewClockgatingMethodology.docx  SVX_UML_methods_removed 02 27 2012.vsd
svx_repo/bin1/: certify_as_golden  diff_golden  m4_config.m4  make_all  make_regress_all  post_m4  pre_m4  regress_clean  run  run_m4  run_svxpp  run_vcs  svmetrics  svx_repo_context.pm  test_vx
svx_repo/elisp/: svx_util.el
svx_repo/examples/beh_hier/: beh_hier.vx
svx_repo/examples/doc_examples/: users_guide1.vx
svx_repo/examples/dttc_2012/: operand3.vx  operand4.vx
svx_repo/examples/ring/: ring.vxm4  ring_tb.vx
svx_repo/examples/slide_example/: slide_example.vx
svx_repo/examples/yuras_debug/: debug.vx
svx_repo/examples/yuras_presentation/: yuras_presentation.vx
svx_repo/m4/: generic.vxm4  pipeflow_lib.vxm4  svx_m4_lib.vxm4
svx_repo/regression/: CMakeLists.txt
svx_repo/src/: AppLauncher.java  CMakeLists.txt
svx_repo/src/joptsimple/: CMakeLists.txt  IPPlan_Worksheet_SVX.xls
svx_repo/src/svx/: CMakeLists.txt  Main.java
svx_repo/src/svx/behavioral/: Alignment.java  Clock.java  LogicalBehHier.java  LogicalBehScope.java  LogicalBranch.java  LogicalNode.java  LogicalPipeline.java  LogicalStage.java  LogicalWhen.java  PipeSignal.java  TransitionStage.java
svx_repo/src/svx/behavioral/range/: BitRange.java  Range.java  TransitionRange.java  UsedBitRange.java  WildcardedSigRef.java
svx_repo/src/svx/config/: CommandLineOptions.java  IdentifierType.java  ProjSpecific.java
svx_repo/src/svx/parse/: ActiveParseContext.java  Assignment.java  GeneratedSvFile.java  NodeType.java  ParseBehHier.java  ParseBehScope.java  ParseBranch.java  ParseContext.java  ParseEndSource.java  ParseIdentifierNode.java  ParseNode.java  ParsePipeline.java  ParseSV.java  ParseSVX.java  ParseSVXVersion.java  ParseSeq.java  ParseSource.java  ParseStage.java  ParseSvType.java  ParseWhen.java  Prefix.java  SourceFile.java
svx_repo/src/svx/parse/identifier/: Expression.java  Identifier.java  ParseElement.java  ParseMnemonic.java
svx_repo/src/svx/utilities/: Severity.java
svx_repo/verilog/: svx.vh
